# pkmn

./: .gitattributes  .gitignore  HPC.md  README.md  probe_invariant.py  pyproject.toml  requirements.txt
agent/: main.py
notes/: cabt_api.md
rl/: README.md  STATE_ACTION_SPACE.md  __init__.py  attack_data.py  az.py  az2.py  buff_data.py  card_features.py  decks.py  decks_generated.py  decks_kaggle.py  decks_meta.py  dqn.py  effect_data.py  enc_constants.py  encoding.py  encoding2.py  encoding_fx.py  env.py  evaluate.py  infer_server.py  numpy_policy.py  policy.py  policy2.py  search_agent.py  search_agent2.py  tournament.py  train.py  vec_env.py
scripts/: _common.py  _sps_envbench.py  _sps_profile.py  _wk_bench.py  audit_v2.py  az.sh  bc_train.py  bench_profile.py  bench_sps.py  build_bc_dataset.py  build_decks.py  build_submission.py  deck_gauntlet.py  eval_suite.py  evaluate.py  export_rl_submission.py  gen_effect_data.py  h2h.py  h2h_ckpts.py  h2h_mcts_champion.py  h2h_v2.py  h2h_v2_mcts.py  h2h_vs_champion.py  map_decks.py  map_fetched.py  mine_episodes.py  play.py  prof_train.py  prof_v2_sps.py  rr_h2h.py  run_battle.py  scout_episodes.py  serve_play.py  setup_eden.sh  setup_eden_gpu.sh  test_infer_server.py  test_trunc.py  test_vec_server.py  tournament.sh  train_chain.sh  (+8 more)
